fix: z-index

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -109,7 +109,7 @@ body {
   justify-content: space-between;
   height: 60px;
   position: relative;
-  z-index: 2;
+  z-index: 3;
   position: sticky;
   top: 0;
   left: 0;
@@ -126,7 +126,7 @@ body {
 }
 
 .mobile-menu {
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   top: 60px;
   left: 0;
